kubernetes/istio-demo/ingress-router/00-no-injected-pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-demo-00
  labels:
    app: sidecar-demo-00
spec:
  containers:
    - name: sidecar-demo-00
      image: lukelau/curl:0.0.1
      command: ['sh', '-c', 'sleep 100000']
